--- a/app/card/card.component.html
+++ b/app/card/card.component.html
@@ -1,9 +1,9 @@
 <div class="col-sm-3">
     <div class="card">
         <div class="card-block">
-            <p>Task Title</p>
+            <p>{{ task.content }}</p>
             <div class="card-footer">
-                <p> Not Complete </p>
+                <i class="fa fa-times" aria-hidden="true"></i> {{ task.completed }} 
             </div>
 
         </div>
